--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,7 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+# And these new individuals contributed for the updates in this repository.
+Hugo Fernel Santiago Gómez <1547.holbertonschool.com>
+Esteban De La Hoz <1542@holbertonschool.com>
